Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Cownet</h1>
-        <h2>Cow say's you download too much</h2>
+        <h2>Cow say&#39;s you download too much</h2>
 
         <section id="downloads">
           <a href="https://github.com/obihann/Cownet/zipball/master" class="btn">Download as .zip</a>
@@ -36,9 +36,15 @@
 </blockquote>
 
 <pre><code>
- _______________________________
-&lt; Received 1.6 GB / Sent 1.8 GB &gt;
- -------------------------------
+                              _
+  ___ _____      ___ __   ___| |_
+ / __/ _ \ \ /\ / / '_ \ / _ \ __|
+| (_| (_) \ V  V /| | | |  __/ |_
+ \___\___/ \_/\_/ |_| |_|\___|\__|
+
+ ___________________________________
+&lt; Received 173.9 MB / Sent 337.7 MB &gt;
+ -----------------------------------
         \   ^__^
          \  (oo)\_______
             (__)\       )\/\
