Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 <li><a href="#instructions">Instructions</a></li>
 <li><a href="#license">License</a></li>
 </ul><h2>
+<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
+
+<p>The latest stable release is <a href="https://github.com/obihann/Cownet/archive/0.2.0-beta.tar.gz">0.2.0 Beta</a>.</p>
+
+<p>SHA1: 16a7b8e563d086a1b5078ce15f7f8688e2a59572</p>
+
+<h2>
 <a name="setup" class="anchor" href="#setup"><span class="octicon octicon-link"></span></a>Setup</h2>
 
 <p>This is a Python tool that is presently only built for OSX. To render the output as seen above we use <a href="http://www.figlet.org/">figlet</a> and <a href="http://en.wikipedia.org/wiki/Cowsay">cowsay</a>.
